[project]
name = "moai-cafe24-mcp"
version = "0.1.0"
description = "카페24(Cafe24) 쇼핑몰 API MCP — Admin API(19 도메인) + Analytics API(cafe24data) 전 엔드포인트를 선언적 레지스트리 기반 도구로 제공. OAuth2 access(2h)/refresh(2w, 회전) 자동 갱신, Leaky Bucket + Usage 이중 레이트리밋 준수, X-Cafe24-Api-Version 2026-03-01."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-MoAI-NC-ND-1.0" }
authors = [{ name = "modu-ai" }]
keywords = ["mcp", "cafe24", "카페24", "ecommerce", "model-context-protocol", "shopping-mall"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.scripts]
moai-cafe24-mcp = "moai_cafe24.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moai_cafe24"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
]
