[project]
name = "moai-imweb-mcp"
version = "0.1.0"
description = "아임웹(Imweb) OPEN API v3 MCP — 쇼핑몰 운영 전 도메인 136개 액션을 8 카테고리 도구로 제공 (주문·상품·회원·커뮤니티·프로모션·결제·사이트정보·스크립트). OAuth2 authorizationCode + JWT access token(자동 갱신)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-MoAI-NC-ND-1.0" }
authors = [{ name = "modu-ai" }]
keywords = ["mcp", "imweb", "아임웹", "ecommerce", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.scripts]
moai-imweb-mcp = "moai_imweb.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moai_imweb"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
]
